--- a/src/app/colaboradores/crear-colaboradores/crear-colaboradores.component.html
+++ b/src/app/colaboradores/crear-colaboradores/crear-colaboradores.component.html
@@ -8,7 +8,7 @@
       class="border-2 border-gray-700 flex h-14  items-center justify-between px-6 py-2 text-sm font-semibold text-white bg-green-500  shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
     >
       <mat-icon>add</mat-icon>
-      <span class="ml-4" > retornar a lista de puntos de venta  </span>
+      <span class="ml-4" > retornar  </span>
     </button>
   
       <input
