--- a/src/app/inventario_module/crear-producto/crear-producto.component.html
+++ b/src/app/inventario_module/crear-producto/crear-producto.component.html
@@ -40,6 +40,11 @@
       </mat-form-field>
 
       <mat-form-field>
+        <mat-label>PRECIO-INICIAL</mat-label>
+        <input matInput formControlName="precioInicial" />
+      </mat-form-field>
+
+      <mat-form-field>
         <mat-label> DESTACADO </mat-label>
         <mat-select formControlName="destacado">
           <mat-option value="true">SI</mat-option>
@@ -52,21 +57,7 @@
         <textarea matInput formControlName="descripcion"></textarea>
       </mat-form-field>
 
-      <!--a
-        class="mb-4 inline-block w-auto text-center min-w-[200px] px-6 py-4 text-white transition-all rounded-md shadow-xl sm:w-auto bg-gradient-to-r from-blue-600 to-blue-500 hover:bg-gradient-to-b dark:shadow-blue-900 shadow-blue-200 hover:shadow-2xl hover:shadow-blue-400 hover:-tranneutral-y-px"
-        href=""
-        >AGREGAR FICHA TECNICA
-      </!--a>
-      <a
-        class="mb-4 inline-block w-auto text-center min-w-[200px] px-6 py-4 text-white transition-all rounded-md shadow-xl sm:w-auto bg-gradient-to-r from-blue-600 to-blue-500 hover:bg-gradient-to-b dark:shadow-blue-900 shadow-blue-200 hover:shadow-2xl hover:shadow-blue-400 hover:-tranneutral-y-px"
-        href=""
-        >AGREGAR PRECIOS DE VENTA
-      </a>
-      <a--
-        class="mb-4 inline-block w-auto text-center min-w-[200px] px-6 py-4 text-white transition-all rounded-md shadow-xl sm:w-auto bg-gradient-to-r from-blue-600 to-blue-500 hover:bg-gradient-to-b dark:shadow-blue-900 shadow-blue-200 hover:shadow-2xl hover:shadow-blue-400 hover:-tranneutral-y-px"
-        href=""
-        >PROMOCIONES ASOCIADAS
-      </a-->
+      
     </div>
 
     <div class="flex items-center justify-center gap-5 flex-wrap">
