registro de nuevos pintos de venta

--- a/src/app/colaboradores/crear-colaboradores/crear-colaboradores.component.html
+++ b/src/app/colaboradores/crear-colaboradores/crear-colaboradores.component.html
@@ -32,6 +32,11 @@
                     <input matInput formControlName="razonSocial" />
                 </mat-form-field>
 
+                <mat-form-field>
+                    <mat-label>DIRECCION</mat-label>
+                    <input matInput formControlName="direccion" />
+                </mat-form-field>
+
                 
                 <mat-form-field>
                     <mat-label>TELEFONO</mat-label>
