--- a/src/app/colaboradores/tiendas/tiendas.component.html
+++ b/src/app/colaboradores/tiendas/tiendas.component.html
@@ -1,53 +1,61 @@
-<div class="shadow-md sm:rounded-lg w-full border-2 border-gray-700 dark:border-gray-700">
-    <div class="flex justify-between items-center p-6 bg-gray-800 dark:bg-gray-800 border-b dark:border-gray-700">
-      
-      
-      
-  
-      <input
-        type="text"
-        class="w-1/3 px-3 py-2 text-sm text-gray-300 placeholder-gray-500 border-2 border-gray-700 rounded-lg focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
-        placeholder="Buscar..."
-      />
-  
-      <button
-        type="button"
-        (click)="navegar()"
-        class="flex min-h-14  items-center justify-between px-4 py-2 text-sm font-semibold text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
-      >
-        <mat-icon>add</mat-icon>
-        <span class="ml-2">Agregar punto de venta</span>
-      </button>
-    </div>
+<div
+  class="shadow-md sm:rounded-lg w-full border-2 border-gray-700 dark:border-gray-700"
+>
+  <div
+    class="flex justify-between items-center p-6 bg-gray-800 dark:bg-gray-800 border-b dark:border-gray-700"
+  >
+    <input
+      type="text"
+      class="w-1/3 px-3 py-2 text-sm text-gray-300 placeholder-gray-500 border-2 border-gray-700 rounded-lg focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
+      placeholder="Buscar..."
+    />
 
-    @if (isLoading) {
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    <button
+      type="button"
+      (click)="navegar()"
+      class="flex min-h-14 items-center justify-between px-4 py-2 text-sm font-semibold text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
+    >
+      <mat-icon>add</mat-icon>
+      <span class="ml-2">Agregar punto de venta</span>
+    </button>
+  </div>
+
+  @if (isLoading) {
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  }
+
+  <div class="flex flex-wrap gap-1 p-1">
+    @for (item of puntosDeVenta; track $index) {
+    <div
+      class="w-5/12 mx-auto bg-white rounded-xl shadow-md overflow-hidden"
+    >
+      <div class="md:flex">
+        <div class="md:shrink-0">
+          <img
+            class="h-48 w-full object-cover md:h-full md:w-48"
+            [src]="item.imagen || mock"
+            alt="imagen de la fachada"
+          />
+        </div>
+        <div class="p-8">
+          <div
+            class="uppercase tracking-wide text-sm text-indigo-500 font-semibold"
+          >
+            {{ item.razonSocial }}
+          </div>
+          <a
+            href="#"
+            class="block mt-1 text-lg leading-tight font-medium text-black hover:underline"
+            >{{ item.correo }}
+          </a>
+          <ul>
+            @for (item of item.colaboradorId; track $index) {
+            <li>vendedor</li>
+            }
+          </ul>
+        </div>
+      </div>
+    </div>
     }
-    
-    <div class="flex flex-wrap gap-6 p-6">
-
-        
-        @for (item of puntosDeVenta; track $index) {
-
-            <mat-card class="w-[250px]" appearance="outlined">
-                <mat-card-header>
-                  <mat-card-title>{{item.razonSocial}}</mat-card-title>
-                  <mat-card-subtitle>{{item.correo}}</mat-card-subtitle>
-                </mat-card-header>
-
-                <img mat-card-image [src]='item.imagen || mock' alt="photo de tineda" class="h-[300px]">
-                
-                <mat-card-actions class="flex justify-between">
-                  <button (click)="verDetalles(item.id)" mat-button>MAS iNFORMACION</button>
-                  <button mat-button>EDITAR </button>
-                </mat-card-actions>
-              </mat-card>
-    
-            
-        }
-
-    </div>
-
-
-
+  </div>
 </div>
